added forgot and reset password functionality

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,9 @@ DB_URI = 'mongodb://127.0.0.1:27017/Ecommerce'
 JWT_SECRET=batman
 JWT_EXPIRE=5d
 COOKIE_EXPIRE=5
+
+SMTP_PASSWORD="ecom1234"
+SMTP_MAIL="eccomercecompany@gmail.com"
+SMTP_SERVICE="gmail"
+SMTP_HOST="smtp.gmail.com"
+SMPT_PORT=465
